Добавляет реализацию ручек обновления локации и добавления батчами
